RESOLVED FIXED287834
[Site Isolation] Fix broken frame tree traversals in BackForwardCache::trySuspendPage
https://bugs.webkit.org/show_bug.cgi?id=287834
Summary [Site Isolation] Fix broken frame tree traversals in BackForwardCache::trySus...
Charlie Wolfe
Reported 2025-02-17 16:15:02 PST
These frame tree traversals would skip over some local frames if there were remote frames in the frame tree. No change in behavior yet, since the back forward cache is still disabled.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-17 16:15:37 PST
Charlie Wolfe
Comment 2 2025-02-17 16:16:32 PST
EWS
Comment 3 2025-02-18 13:35:33 PST
Committed 290549@main (8ccab2d8ee45): <https://commits.webkit.org/290549@main> Reviewed commits have been landed. Closing PR #40736 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.