[Site Isolation] Fix broken frame tree traversals in BackForwardCache::trySuspendPage https://bugs.webkit.org/show_bug.cgi?id=287834 rdar://145015809

Reviewed by BJ Burg and Alex Christensen.

Remove a local frame early return and fix recursive functions so that they visit local frames that have
remote parents. No change in behavior while bfcache or site isolation is disabled.

* Source/WebCore/history/BackForwardCache.cpp:
(WebCore::firePageHideEventRecursively):
(WebCore::BackForwardCache::trySuspendPage):
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::stopForBackForwardCache):
* Source/WebCore/page/Frame.cpp:
(WebCore::Frame::stopForBackForwardCache):
* Source/WebCore/page/Frame.h:

Canonical link: https://commits.webkit.org/290549@main